force-app/main/default/objects/Project_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>PDF Guide</fullName>
            </value>
            <value>
                <fullName>Slide Deck</fullName>
            </value>
            <value>
                <fullName>Code Sample</fullName>
            </value>
            <value>
                <fullName>Blog Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>