force-app/main/default/objects/Project_Asset__c/fields/Asset_URL__c.field-meta.xml
<CustomField>
    <fullName>Asset_URL__c</fullName>
    <label>Asset URL</label>
    <type>Url</type>
</CustomField>